--- a/笔记/第十二章 使用人工神经网络识别图像.md
+++ b/笔记/第十二章 使用人工神经网络识别图像.md
@@ -13,3 +13,24 @@
 
 ## 使用人工神经网络对复杂函数建模
 
+对于本章中将要讨论的多层人工神经网络来说，人工神经元是其构建的基石。人工神经网络的基本概念是建立在对人脑如何应对复杂问题的假想和模型构建上的。
+
+在过去的十年中，神经网络研究取得了许多重大突破成就了当前深度学习算法，反向传播算法可以通过无类标数据训练的深度神经网络(多层神经网络)进行特征检测。
+
+比如，
+
+谷歌翻译:https://research.googleblog.com/2015/07/how-google-translate-squeezes-deep.html
+
+facebook公司给图片打标签的deepface:https://www.cv-foundation.org/openaccess/content_cvpr_2014/papers/Taigman_DeepFace_Closing_the_2014_CVPR_paper.pdf
+
+百度的DeepSpeech:https://arxiv.org/pdf/1412.5567.pdf
+
+制药行业的新药研发和毒性检测:https://arxiv.org/pdf/1503.01445.pdf
+
+### 单层神经网络回顾
+
+参考第二章的adaline。
+
+### 多层神经网络架构简介
+
+在本节将看到如何将多个单独的神经元连接为一个多层前馈神经网络(multi-layer feedforward neural network)。这种特殊类型的网络也称为多层感知器(MLP)。三层MLP的概念啊:一个输入层、一个隐层，以及一个输出层。隐层的所有单元完全连接到输入层熵，同时输出层的单元也完全连接到了隐层中。如果网络中包含不止一个隐层，我们则称其为深度人工神经网络。
